Fixes overflow issue
#42

--- a/styles/welcome.less
+++ b/styles/welcome.less
@@ -2,10 +2,6 @@
 
 .welcome {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 4em;
   font-size: 1.25em;
   line-height: 1.4;
   color: @text-color;
@@ -30,7 +26,10 @@
 
   &-container {
     width: 100%;
-    max-width: 400px;
+    max-width: 580px;
+    min-width: 300px;
+    margin: auto;
+    padding: 3em 2em;
   }
 
   &-header {
